force-app/main/default/objects/Forecast_Change_Event__c/Forecast_Change_Event__c.object-meta.xml
<CustomObject>
    <description>Immutable history ledger recording every forecast change event.</description>
    <label>Forecast Change Event</label>
    <nameField><label>Forecast Change Event Name</label><type>AutoNumber</type><displayFormat>FCE-{000000}</displayFormat></nameField>
    <pluralLabel>Forecast Change Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>