force-app/main/default/objects/Forecast_Change_Event__c/fields/Change_Context__c.field-meta.xml
<CustomField>
    <fullName>Change_Context__c</fullName>
    <label>Change Context</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>