force-app/main/default/objects/Forecast_Change_Event__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Category_Change</fullName><default
        >false</default><label>Category_Change</label></value>
            <value><fullName>Metric_Change</fullName><default
        >false</default><label>Metric_Change</label></value>
            <value><fullName>Close_Date_Change</fullName><default
        >false</default><label>Close_Date_Change</label></value>
            <value><fullName>Submit</fullName><default>false</default><label
        >Submit</label></value>
            <value><fullName>Freeze</fullName><default>false</default><label
        >Freeze</label></value>
            <value><fullName>Unfreeze</fullName><default>false</default><label
        >Unfreeze</label></value>
            <value><fullName>Governance_Flag</fullName><default
        >false</default><label>Governance_Flag</label></value>
            <value><fullName>Governance_Resolve</fullName><default
        >false</default><label>Governance_Resolve</label></value>
            <value><fullName>AI_Probability_Refresh</fullName><default
        >false</default><label>AI_Probability_Refresh</label></value>
            <value><fullName>System_Auto_Set</fullName><default
        >false</default><label>System_Auto_Set</label></value>
            <value><fullName>Scope_Transfer</fullName><default
        >false</default><label>Scope_Transfer</label></value>
            <value><fullName>Override_Created</fullName><default
        >false</default><label>Override_Created</label></value>
            <value><fullName>Config_Change</fullName><default
        >false</default><label>Config Change</label></value>
            <value><fullName>Quota_Set</fullName><default>false</default><label
        >Quota Set</label></value>
            <value><fullName>Participant_Sync</fullName><default
        >false</default><label>Participant Sync</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>