force-app/main/default/objects/Forecast_Change_Event__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <label>Changed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Authored Change Events</relationshipLabel>
    <relationshipName>Authored_Change_Events</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>