force-app/main/default/objects/Forecast_Change_Event__c/fields/Config_Change_Details__c.field-meta.xml
<CustomField>
    <fullName>Config_Change_Details__c</fullName>
    <label>Config Change Details</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description
  >JSON with old/new values for admin configuration changes. Only populated when Change_Type__c is Config_Change, Quota_Set, or Participant_Sync.</description>
</CustomField>