force-app/main/default/objects/Forecast_Change_Event__c/fields/Crossed_Period_Boundary__c.field-meta.xml
<CustomField>
    <fullName>Crossed_Period_Boundary__c</fullName>
    <label>Crossed Period Boundary</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>