force-app/main/default/objects/Forecast_Change_Event__c/fields/Days_To_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Period_End__c</fullName>
    <label>Days To Period End</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>