force-app/main/default/objects/Forecast_Change_Event__c/fields/Forecast_Override__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Override__c</fullName>
    <label>Forecast Override</label>
    <type>Lookup</type>
    <referenceTo>Forecast_Override__c</referenceTo>
    <relationshipLabel>Change Events</relationshipLabel>
    <relationshipName>Change_Events</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>