force-app/main/default/objects/Forecast_Change_Event__c/fields/Forecast_Period__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Period__c</fullName>
    <label>Forecast Period</label>
    <type>Lookup</type>
    <referenceTo>Forecast_Period__c</referenceTo>
    <relationshipLabel>Change Events</relationshipLabel>
    <relationshipName>Change_Events_Period</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>