force-app/main/default/objects/Forecast_Change_Event__c/fields/Is_Negative_Movement__c.field-meta.xml
<CustomField>
    <fullName>Is_Negative_Movement__c</fullName>
    <label>Is Negative Movement</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>