force-app/main/default/objects/Forecast_Change_Event__c/fields/Metric_Changes__c.field-meta.xml
<CustomField>
    <fullName>Metric_Changes__c</fullName>
    <label>Metric Changes</label>
    <description>JSON: all metric slot deltas</description>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>