force-app/main/default/objects/Forecast_Change_Event__c/fields/New_Category__c.field-meta.xml
<CustomField>
    <fullName>New_Category__c</fullName>
    <label>New Category</label>
    <type>Text</type>
    <length>50</length>
</CustomField>