force-app/main/default/objects/Forecast_Change_Event__c/fields/Old_Category__c.field-meta.xml
<CustomField>
    <fullName>Old_Category__c</fullName>
    <label>Old Category</label>
    <type>Text</type>
    <length>50</length>
</CustomField>