force-app/main/default/objects/Forecast_Change_Event__c/fields/Old_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Close_Date__c</fullName>
    <label>Old Close Date</label>
    <type>Date</type>
</CustomField>