force-app/main/default/objects/Forecast_Change_Event__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Forecast Change Events</relationshipLabel>
    <relationshipName>Forecast_Change_Events_User</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>