force-app/main/default/objects/Forecast_Change_Event__c/fields/Primary_Metric_New__c.field-meta.xml
<CustomField>
    <fullName>Primary_Metric_New__c</fullName>
    <label>Primary Metric New</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>